[package]
name = "oxidegb"
version = "0.1.0"
authors = ["Kanabenki <lucien.menassol@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixels = "0.2.0"
winit = "0.22.2"
flagset = "0.3.0"
enum_dispatch = "0.3.4"
anyhow = "1.0.34"
structopt = "0.3.20"
