[package]
name = "oxidegb"
version = "0.1.0"
authors = ["Kanabenki <lucien.menassol@gmail.com>"]
edition = "2021"
rust-version = "1.66"

[dependencies]
pixels = "0.10.0"
winit = "0.27.5"
flagset = "0.4.3"
enum_dispatch = "0.3.8"
color-eyre = "0.6.2"
clap = { version = "4.0.29", features = ["derive"] }
cpal = "0.14.2"
ringbuf = "0.3.1"
blip_buf = "0.1.4"
