[package]
name = "oxidegb"
version = "0.1.0"
authors = ["Kanabenki <lucien.menassol@gmail.com>"]
edition = "2021"
rust-version = "1.66"

[dependencies]
pixels = "0.13.0"
winit = "0.28.6"
flagset = { version = "0.4.3", features = ["serde"] }
enum_dispatch = "0.3.12"
color-eyre = "0.6.2"
clap = { version = "4.3.19", features = ["derive"] }
cpal = "0.15.2"
ringbuf = "0.3.3"
blip_buf = "0.1.4"
serde = { version = "1.0.180", features = ["derive"] }
serde-big-array = "0.5.1"
